# tuiscape

./: .gitignore  CLAUDE.md  Cargo.toml  TODO.md
core/: Cargo.toml
core/src/: domain.rs  lib.rs  player.rs  storage.rs
core/src/domain/: level_data.rs  skill_method.rs  skills.rs
core/src/domain/skills/: cooking.rs  fishing.rs  skill_type.rs  woodcutting.rs
src/: main.rs  tui.rs
tui/: Cargo.toml
tui/src/: main.rs  tui.rs
