[package]
name = "script"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.58", features = ["derive"] }
ratatui = "0.29.0"
color-eyre = "0.6.3"
crossterm = "0.29.0"
strum = { version = "0.27.2", features = ["derive"] }

[[bin]]
edition = "2021"
name = "limits_script"
path = "src/main.rs"